Add Redis caching