@@ -1,20 +1,6 @@
 # CRM System — Spring Boot
 
-A full-stack **Customer Relationship Management** system built with **Spring Boot 3.3**, **MySQL 8**, and a **Vanilla JS** frontend. Supports customer management, product catalog, payments, company profiles, offer tracking, and professional PDF invoice generation.
-
----
-
-## Screenshots
-
-> Frontend runs at `http://localhost:8081`
-
-| Module | Description |
-|--------|-------------|
-| Customers | Add, search by email/phone, view with ID |
-| Products | Manage product catalog with pricing |
-| Payments | Record payments with customer name |
-| Companies | Manage company profiles |
-| Invoices | Generate & download PDF invoices |
+A full-stack **Customer Relationship Management** system built with **Spring Boot 3.3**, **PostgreSQL**, and a **Vanilla JS** frontend. Supports customer management, product catalog, payments, company profiles, offer tracking, PDF invoice generation, JWT authentication, caching, and rate limiting.
 
 ---
 
@@ -25,7 +11,10 @@ A full-stack **Customer Relationship Management** system built with **Spring Boo
 | Language | Java | 17 |
 | Framework | Spring Boot | 3.3.1 |
 | ORM | Spring Data JPA / Hibernate | — |
-| Database | MySQL | 8+ |
+| Database | PostgreSQL | 15+ |
+| Security | Spring Security + JJWT | 0.12.6 |
+| Cache | Spring Cache + Redis (Lettuce) | — |
+| Rate Limiting | Bucket4j | 8.10.1 |
 | PDF Generation | iText 7 | 7.2.5 |
 | API Docs | SpringDoc OpenAPI (Swagger UI) | 2.5.0 |
 | Connection Pool | HikariCP | — |
@@ -36,10 +25,9 @@ A full-stack **Customer Relationship Management** system built with **Spring Boo
 
 ## Prerequisites
 
-Make sure the following are installed before running the project:
-
 - **Java 17+** — [Download](https://adoptium.net/)
-- **MySQL 8+** — [Download](https://dev.mysql.com/downloads/)
+- **PostgreSQL 15+** — [Download](https://www.postgresql.org/download/)
+- **Redis 7+** — [Download](https://redis.io/download/) or run via Docker: `docker run -d -p 6379:6379 redis:7`
 - **Maven 3.8+** — [Download](https://maven.apache.org/download.cgi)
 
 ---
@@ -49,38 +37,104 @@ Make sure the following are installed before running the project:
 ### 1. Clone the Repository
 
 ```bash
-git clone https://github.com/your-username/CRM_Spring_Boot.git
-cd CRM_Spring_Boot
+git clone https://github.com/Anshuman0308/CRM-Spring-Boot-System.git
+cd CRM-Spring-Boot-System
 ```
 
-### 2. Configure the Database
+### 2. Create the Database
+
+```sql
+CREATE DATABASE crm_db;
+```
+
+### 3. Configure the Database
 
 Edit `src/main/resources/application.properties`:
 
 ```properties
-spring.datasource.url=jdbc:mysql://localhost:3306/crm_db?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=your_username
+spring.datasource.url=jdbc:postgresql://localhost:5432/crm_db
+spring.datasource.username=postgres
 spring.datasource.password=your_password
 ```
 
-> The database `crm_db` is created automatically on first run via `createDatabaseIfNotExist=true`.
+Or set environment variables (recommended for production):
 
-### 3. Build & Run
+```
+DATABASE_URL=jdbc:postgresql://localhost:5432/crm_db
+DATABASE_USERNAME=postgres
+DATABASE_PASSWORD=your_password
+```
+
+### 4. Build & Run
 
 ```bash
 mvn spring-boot:run
 ```
 
-### 4. Open the Frontend
+### 5. Open the Frontend
 
 ```
 http://localhost:8081
 ```
 
-### 5. Swagger API Documentation
+### 6. Swagger API Docs
 
 ```
 http://localhost:8081/swagger-ui/index.html
+```
+
+---
+
+## Authentication
+
+All API endpoints (except `/api/auth/**`) require a JWT Bearer token.
+
+### Login
+
+```http
+POST /api/auth/login
+Content-Type: application/json
+
+{
+  "username": "admin",
+  "password": "admin123"
+}
+```
+
+**Response:**
+```json
+{
+  "accessToken": "eyJ...",
+  "refreshToken": "eyJ..."
+}
+```
+
+### Refresh Token
+
+```http
+POST /api/auth/refresh
+Content-Type: application/json
+
+{
+  "refreshToken": "eyJ..."
+}
+```
+
+| Token | Expiry |
+|-------|--------|
+| Access Token | 15 minutes |
+| Refresh Token | 7 days |
+
+The frontend handles login, token storage, and auto-refresh automatically.
+
+---
+
+## Rate Limiting
+
+- **20 requests per minute per IP**
+- Exceeding the limit returns `HTTP 429` with:
+```json
+{ "error": "Too many requests. Limit: 20/min." }
 ```
 
 ---
@@ -91,40 +145,46 @@ http://localhost:8081/swagger-ui/index.html
 src/
 └── main/
     ├── java/dev/nida/crm/
-    │   ├── Application.java              # Entry point
+    │   ├── Application.java
     │   ├── config/
-    │   │   └── WebConfig.java            # CORS & static resource config
-    │   ├── controller/                   # REST API endpoints
+    │   │   └── WebConfig.java
+    │   ├── controller/
+    │   │   ├── AuthController.java        # Login + refresh endpoints
     │   │   ├── CustomerController.java
     │   │   ├── CompanyController.java
     │   │   ├── PaymentController.java
     │   │   ├── ProductController.java
     │   │   ├── CategoryController.java
     │   │   ├── OfferController.java
-    │   │   ├── InvoiceController.java    # JSON + PDF endpoints
+    │   │   ├── InvoiceController.java
+    │   │   ├── DashboardController.java   # Cached stats
     │   │   └── HomeController.java
-    │   ├── service/                      # Business logic
-    │   │   ├── InvoiceService.java       # Assembles invoice DTO
-    │   │   ├── PaymentService.java       # Resolves customer name per payment
+    │   ├── security/
+    │   │   ├── JwtUtil.java               # Token generation & validation
+    │   │   ├── JwtFilter.java             # Bearer token filter
+    │   │   ├── RateLimitFilter.java       # Bucket4j per-IP limiter
+    │   │   └── SecurityConfig.java        # Security chain config
+    │   ├── service/
+    │   │   ├── InvoiceService.java
+    │   │   ├── PaymentService.java
     │   │   ├── OfferService.java
     │   │   ├── CustomerService.java
     │   │   └── impl/
-    │   │       ├── CustomerServiceImpl.java
+    │   │       ├── CustomerServiceImpl.java   # @Cacheable / @CacheEvict
     │   │       └── OfferServiceImpl.java
-    │   ├── entities/                     # JPA entities (DB tables)
-    │   │   ├── BaseEntity.java           # Auditing fields (createdDate, etc.)
+    │   ├── entities/
+    │   │   ├── BaseEntity.java
     │   │   ├── Customer.java
     │   │   ├── Company.java
-    │   │   ├── Offer.java                # price, discountPercent fields
+    │   │   ├── Offer.java
     │   │   ├── Payment.java
     │   │   ├── Products.java
     │   │   ├── Category.java
-    │   │   ├── Brand.java
-    │   │   └── ...
-    │   ├── dto/                          # Data Transfer Objects
-    │   │   ├── InvoiceResponse.java      # Customer + product + price + discount + total
-    │   │   └── PaymentResponse.java      # Payment + resolved customer name
-    │   ├── repository/                   # Spring Data JPA repositories
+    │   │   └── Brand.java
+    │   ├── dto/
+    │   │   ├── InvoiceResponse.java
+    │   │   └── PaymentResponse.java
+    │   ├── repository/
     │   │   ├── CustomerRepository.java
     │   │   ├── OfferRepository.java
     │   │   ├── PaymentRepository.java
@@ -134,62 +194,70 @@ src/
     │   └── exception/
     │       └── GlobalExceptionHandler.java
     └── resources/
-        ├── application.properties        # Main config (DB, JPA, HikariCP)
+        ├── application.properties
         └── static/
-            ├── index.html                # Single-page frontend
-            └── app.js                    # All frontend JS logic
+            ├── index.html
+            └── app.js
 ```
 
 ---
 
 ## API Endpoints
 
+> All endpoints require `Authorization: Bearer <accessToken>` header except `/api/auth/**`.
+
+### Auth — `/api/auth`
+
+| Method | Endpoint | Auth | Description |
+|--------|----------|------|-------------|
+| POST | `/login` | No | Login, get token pair |
+| POST | `/refresh` | No | Refresh access token |
+
+### Dashboard — `/api/dashboard`
+
+| Method | Endpoint | Description |
+|--------|----------|-------------|
+| GET | `/stats` | Total customers, offers, payments (cached) |
+
 ### Customers — `/api/customers`
 
 | Method | Endpoint | Description |
 |--------|----------|-------------|
 | GET | `/` | Get all customers |
-| GET | `/{id}` | Get customer by ID |
+| GET | `/{id}` | Get by ID |
 | GET | `/email/{email}` | Search by email |
 | GET | `/phone/{phone}` | Search by phone |
 | POST | `/` | Create customer |
 | PUT | `/{id}` | Update customer |
 | DELETE | `/{id}` | Delete customer |
 
-### Payments — `/api/payments`
-
-| Method | Endpoint | Description |
-|--------|----------|-------------|
-| GET | `/` | Get all payments with customer name |
-| GET | `/{id}` | Get payment by ID |
-| POST | `/` | Create payment |
-| PUT | `/{id}` | Update payment |
-| DELETE | `/{id}` | Delete payment |
-
-### Invoices — `/api/invoices`
-
-| Method | Endpoint | Description |
-|--------|----------|-------------|
-| GET | `/offer/{offerId}` | Get invoice as JSON |
-| GET | `/offer/{offerId}/pdf` | Download invoice as PDF |
-
 ### Products — `/api/products`
 
 | Method | Endpoint | Description |
 |--------|----------|-------------|
 | GET | `/` | Get all products |
-| GET | `/{id}` | Get product by ID |
+| GET | `/{id}` | Get by ID |
 | GET | `/category/{category}` | Filter by category |
 | POST | `/` | Create product |
 | PUT | `/{id}` | Update product |
 | DELETE | `/{id}` | Delete product |
+
+### Payments — `/api/payments`
+
+| Method | Endpoint | Description |
+|--------|----------|-------------|
+| GET | `/` | Get all payments with customer name |
+| GET | `/{id}` | Get by ID |
+| POST | `/` | Create payment |
+| PUT | `/{id}` | Update payment |
+| DELETE | `/{id}` | Delete payment |
 
 ### Companies — `/api/companies`
 
 | Method | Endpoint | Description |
 |--------|----------|-------------|
 | GET | `/` | Get all companies |
-| GET | `/{id}` | Get company by ID |
+| GET | `/{id}` | Get by ID |
 | POST | `/` | Create company |
 | PUT | `/{id}` | Update company |
 | DELETE | `/{id}` | Delete company |
@@ -199,38 +267,49 @@ src/
 | Method | Endpoint | Description |
 |--------|----------|-------------|
 | GET | `/` | Get all offers |
-| GET | `/{id}` | Get offer by ID |
+| GET | `/{id}` | Get by ID |
 | GET | `/customer/{customerId}` | Get offers by customer |
 | POST | `/` | Create offer |
 | PUT | `/{id}` | Update offer |
 | DELETE | `/{id}` | Delete offer |
 
+### Invoices — `/api/invoices`
+
+| Method | Endpoint | Description |
+|--------|----------|-------------|
+| GET | `/offer/{offerId}` | Get invoice as JSON |
+| GET | `/offer/{offerId}/pdf` | Download invoice as PDF |
+
+---
+
+## Caching
+
+| Cache Name | Cached Data | TTL | Evicted On |
+|------------|-------------|-----|------------|
+| `customers` | Single customer by ID | 10 min | save, update, delete |
+| `customer-list` | All customers list | 5 min | save, update, delete |
+| `dashboard` | Stats counts | 1 min | Customer save, update, delete |
+
 ---
 
 ## Invoice Feature
 
-Generates a professional PDF invoice using **iText 7** containing:
-
-- Invoice number in `INV-00001` format
-- Customer details (name, email, phone, address)
-- Product description, unit price, discount percentage, and total amount
-- Clean printable layout with CRM branding
+Generates a PDF invoice using **iText 7** with:
+- Invoice number (`INV-00001` format)
+- Customer details
+- Product description, price, discount, total
+- Currency: ₹ (INR) in frontend, `Rs.` in PDF
 
 ### Invoice Flow
 
-**Option A — Manual Entry:**
-1. Go to **Invoices** tab
-2. Enter Customer ID and/or Customer Name
-3. Fill in Product description, Price, and Discount
-4. Click **Generate Invoice**
-5. Click **Download PDF** to save
+**Manual Entry:**
+1. Go to **Invoices** tab → fill Customer ID/Name, description, price, discount
+2. Click **Generate Invoice** → **Download PDF**
 
-**Option B — Search by Customer:**
-1. Click **Search by Email / Phone**
-2. Enter customer email or phone number
-3. Select an offer from the dropdown
-4. Click **Load Offer Data** — auto-fills all fields
-5. Click **Generate Invoice** → **Download PDF**
+**Search by Customer:**
+1. Click **Search by Email / Phone** → enter email or phone
+2. Select offer from dropdown → **Load Offer Data**
+3. Click **Generate Invoice** → **Download PDF**
 
 ---
 
@@ -242,35 +321,44 @@ Customer  ──< Offer >── Company
               Payment
 ```
 
-- One **Customer** can have many **Offers**
-- One **Offer** belongs to one **Company**
-- One **Offer** can have many **Payments**
-- **Invoice** is generated from Offer + Customer data
+- One Customer → many Offers
+- One Offer → one Company
+- One Offer → many Payments
+- Invoice generated from Offer + Customer data
 
 ---
 
-## Key Configuration
+## Environment Variables
 
-```properties
-# Server
-server.port=8081
+| Variable | Default | Description |
+|----------|---------|-------------|
+| `PORT` | `8081` | Server port |
+| `DATABASE_URL` | `jdbc:postgresql://localhost:5432/crm_db` | PostgreSQL JDBC URL |
+| `DATABASE_USERNAME` | `postgres` | DB username |
+| `DATABASE_PASSWORD` | `postgres` | DB password |
+| `JWT_SECRET` | `crm-super-secret-key-must-be-32-chars!!` | JWT signing secret |
+| `REDIS_HOST` | `localhost` | Redis host |
+| `REDIS_PORT` | `6379` | Redis port |
+| `REDIS_PASSWORD` | _(empty)_ | Redis password (if auth enabled) |
 
-# Database
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+---
 
-# HikariCP Connection Pool
-spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.connection-timeout=30000
+## Railway Deployment
 
-# JVM (suppress Tomcat native access warning on Java 21+)
-# Add to mvn spring-boot:run via pom.xml jvmArguments:
-# --enable-native-access=ALL-UNNAMED
-```
+1. Create a new Railway project
+2. Add a **PostgreSQL** service
+3. Set environment variables:
+   - `DATABASE_URL` → `${{Postgres.DATABASE_URL}}`
+   - `DATABASE_USERNAME` → `${{Postgres.PGUSER}}`
+   - `DATABASE_PASSWORD` → `${{Postgres.PGPASSWORD}}`
+   - `REDIS_HOST` → `${{Redis.REDIS_HOST}}`
+   - `REDIS_PORT` → `${{Redis.REDIS_PORT}}`
+   - `REDIS_PASSWORD` → `${{Redis.REDIS_PASSWORD}}`
+   - `JWT_SECRET` → your secure random string
 
 ---
 
 ## Author
 
-Developed by **Nida** — CRM Spring Boot Project
+Developed by **Nida** — CRM Spring Boot Project  
+Maintained by **Anshuman**
